[package]
name = "extendable-data"
license = "MIT"
version = "0.1.2"
edition = "2021"
description = "A set of rust macros that allows you to specify data that can be \"extended\" or inherited from."
repository = "https://github.com/Rafaeltheraven/extendable-data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.18"
quote = "1.0.28"
proc-macro2 = "1.0.59"
extendable-data-helpers = {path = "./extendable-data-helpers"}

[dev-dependencies]
syn = {features = ["extra-traits"]}