[package]
name = "extendable-data-helpers"
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
edition.workspace = true
description = "Proc macros for the extendable-data package because cargo makes things difficult."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {workspace = true}
quote = {workspace = true}
proc-macro2 = {workspace = true}

[lib]
proc-macro = true
